# WiiPair

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
apps/wiipair-ui/: Cargo.toml  build.rs
apps/wiipair-ui/src/: cap_self_grant.rs  device_card.rs  device_widgets.rs  dialogs.rs  icon.rs  icons.rs  main.rs  menubar.rs  widgets.rs  xbox_widget.rs
assets/devices/xbox-one/: ATTRIBUTION.md
crates/wiimote-core/: Cargo.toml
crates/wiimote-core/src/: buttons.rs  extension.rs  lib.rs  report.rs
crates/wiimote-daemon/: Cargo.toml
crates/wiimote-daemon/src/: commands.rs  extension_fsm.rs  helpers.rs  hid_scan.rs  lib.rs  persist.rs  scanner.rs  state.rs  ticks.rs  transport.rs  ui_log.rs  user_msg.rs
crates/wiimote-output/: Cargo.toml
crates/wiimote-output/src/: lib.rs  linux.rs  macos.rs  mapping.rs  profile.rs  xbox.rs
crates/wiimote-transport/: Cargo.toml
crates/wiimote-transport/src/: hid.rs  lib.rs
crates/wiimote-transport/src/platform/: linux_impl.rs  linux_mgmt.rs  macos_impl.rs  mod.rs  windows_impl.rs
docs/desktop/: wiipair.desktop
docs/udev/: 99-wiipair.rules
