[workspace]
resolver = "2"
members = [
    "crates/wiimote-core",
    "crates/wiimote-transport",
    "crates/wiimote-output",
    "crates/wiimote-daemon",
    "apps/wiipair-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
bitflags = "2"
parking_lot = "0.12"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1

# Profile used by the GitHub Release pipeline. Strips debug/symbol
# tables to keep the published binary small (~30-40% smaller than the
# bare release profile) without changing the runtime characteristics
# of `cargo build --release` developers use locally.
[profile.release-dist]
inherits = "release"
strip = "symbols"
