[package]
name = "wiipair-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wiipair"
path = "src/main.rs"

[dependencies]
wiimote-core = { path = "../../crates/wiimote-core" }
wiimote-daemon = { path = "../../crates/wiimote-daemon" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
crossbeam-channel = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
