[package]
name = "wiimote-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Off by default — only the daemon (which persists state) needs serde
# wiring. Pure parsers / consumers don't pay the dep cost.
serde = ["dep:serde"]

[dependencies]
bitflags = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1", optional = true, features = ["derive"] }
