[package]
name = "wiimote-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wiimote-core = { path = "../wiimote-core" }
wiimote-transport = { path = "../wiimote-transport" }
wiimote-output = { path = "../wiimote-output" }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
