[package]
name = "wiimote-output"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wiimote-core = { path = "../wiimote-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
vigem-client = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
