[package]
name = "wiimote-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wiimote-core = { path = "../wiimote-core" }
hidapi = "2"
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Devices_Bluetooth",
] }
